DeployK8s/deploy-insurecloudbe.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurecloud-be-svc
  namespace: lab02
  labels:
    app: insurecloud-be
spec:
  selector:
    app: insurecloud-be
  ports:
    - protocol: TCP
      port: 8980
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurecloud-be
  namespace: lab02
  labels:
    app: insurecloud-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurecloud-be
  template:
    metadata:
      labels:
        app: insurecloud-be
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "insurecloud-be"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: insurecloud-be
          image: insurecloudbe:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
