DeployK8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpingress
  namespace: lab02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /insurecloud(/|$)(.*)
            backend:
                service:
                    name: insurecloud-be-svc
                    port:
                        number: 8980
          - pathType: Prefix
            path: /integrationa(/|$)(.*)
            backend:
                service:
                    name: integrationa-svc
                    port:
                        number: 8981
